--- a/index.html
+++ b/index.html
@@ -30,11 +30,11 @@
                 <form action="#" class="search-form">
                     <div class="form-control">
                         <img src="./src/icons/search.png" alt="search">
-                        <input type="text" name="#" id="search-bar" placeholder="Filter by title, companies, expertise">
+                        <input type="text" class="search-bar title-search" placeholder="Filter by title, companies, expertise">
                     </div>
                     <div class="form-control">
                         <img src="./src/icons/map.png" alt="map">
-                        <input type="text" name="#" id="search-bar" placeholder="Filter by location">
+                        <input type="text" class="search-bar location-search" placeholder="Filter by location">
                     </div>
                     <div class="form-control">
                         <div class="inner-form-control">
